framework/css/pat_style.css
/*
  styling by Patrick Funom
*/

/*hide post views in meta data*/
.colored, .oi_popular_widget_views{
  display: none;
}

.player-right{
  background: red;
}

#wrap.embed div.player-right a.via-audiomack{
  display: none;
}
/*post page boder style*/
.oi_big_sidebar_bottom .visible-lg, .oi_single_post_meta{
  box-shadow: 0px 1px 3px #b8b8b8;
}

.oi_logo_place{
  margin-bottom: 0;
}

.oi_after_logo .header_menu{
  margin-left: auto;
}

.oi_single_post_audio, .oi_single_post_video, .oi_single_post_image, .oi_single_post_gallery{
  background: #ffffff;
}
/*DESKTOP*/
@media only screen and (min-width: 900px) {
  .oi_posts_holder, .oi_logo_place{
    width: 70%;
  }
  .oi_single_post{
    margin-right: 10px;
    width: 70% !important;
  }
  .oi_single_post_audio .img-container{
    width: 500px;
    height: 500px;
    margin: 5% auto;
  }

  /*Event Post Style*/
  .single-format-standard .visible-lg{
    display: none !important;
  }

  .single-format-standard .oi_single_post{
    width: 100% !important;
  }
  .single-format-standard .oi_single_post .oi_single_post_title{
    padding: 10px 250px 10px 250px;
  }

  .oi_single_post_title{
    text-align: center;
    padding-top: 0;
    padding-bottom: 0;
  }

  .oi_single_post_standard{
    margin-left: 0 !important;
  }

  .new_single_post_content, .oi_single_post_content{
    padding-left: 20px;
    padding-right: 20px;
    font-size: 1.6rem;
    line-height: 1.9;
    font-family: Walfork,Walsheim,"Helvetica Neue",Helvetica,Arial,sans-serif;
  }

  /*post image border*/
  .oi_single_post .oi_single_post_audio .img-responsive{
    width: 100% !important;
    box-shadow: 0px 0px 15px #000000;
  }

  .oi_post_meta_data_holder{
    max-width: 500px;
  }

  /*logo container*/
  .oi_logo_inner_holder img{
    width: 30%;
  }

  /*hide embedly icon*/
  .card .brd{
    display: none;
  }

  .oi_logo_inner_holder {
    margin-left: 20px;
    padding-top: 20px;
  }

  /*HEADER RESTYLING*/
  .oi_rigth_menu_place, .oi_head_holder, .oi_logo_inner_holder{
    height: 170px;
  }

  /*individual latest posts*/
  .oi_post{
    margin: 0px 5px 0px 5px;
    box-shadow: 0px 1px 3px #b8b8b8;
  }
  .oi_single_post_meta{
    width: 10% !important;
  }
  .oi_post_tringle{
    left: inherit;
    right: -1px;
    transform: rotate(180deg);
  }

  /*side bar sticky*/
  .oi_big_sidebar_bottom{
    width: 29% !important;
  }
  .oi_popular_widget_post_holder{
    padding-bottom: 10px;
    box-shadow: -1px 0px 5px #b8b8b8;
  }

  /*post page*/
  .oi_single_post_audio{
    width: 85%;
    float: right;
  }
}

/*TABLET*/
@media (max-width: 899px) and (min-width: 768px) {

}

/*MOBILE*/
@media (max-width: 767px) and (min-width: 0px) {
  /*sticky nav*/
  /*.oi_head_holder{
    position: fixed;
    top: 0;
    z-index: 1;
  }*/
  .oi_logo_inner_holder img{
    width: 40%;
    float: left;
  }

  .oi_logo{
    height: 50px;
  }

  .oi_logo_inner_holder{
    padding-top: 0px;
    margin: 25px;
  }

  .oi_main_menu_opener{
    float: right;
    color: #ffffff;
    margin-top: -25px;
  }



  .oi_single_post{
    padding-top: 0%;
  }

  .oi_post_tringle{
    display: none;
  }

  /*individual latest posts*/
  .oi_post{
    margin: 20px;
    box-shadow: 0px 1px 3px #b8b8b8;
  }

  .oi_posts_holder {
      position: relative;
      top: 0;
  }

  /*post page*/
  .new_single_post_content, .oi_single_post_content{
  padding-left: 20px;
    padding-right: 20px;
    font-size: 1.6rem;
    line-height: 1.9;
    font-family: Walfork,Walsheim,"Helvetica Neue",Helvetica,Arial,sans-serif;
    background: #ffffff;
  }



  /*iframe audio player*/
  .oi_single_post_content iframe{
    width: 100%;
    /*height: 80px;*/
  }

  .single .single-post .single-format-video iframe{
    width: 100% !important;
    height: 100% !important;
  }
}

/*@media only screen and (min-width: 900px) {
	.wrapfixed {
		position: static !important;
	}


  .oi_single_post_conent iframe {
  	max-height: 100% !important;
  }

	.single-format-image .oi_single_post_title img {
		float: left;
	}

	.hidden-lg oi_small_dev_singlepost_meta {
		width: 10%;
	}

	.single-format-image .oi_single_post_conent p iframe {
	}

	p .jp-relatedposts-post-context {
		display: none;
	}

	.instagram-media {
		height: 800px !important;
	}
}

#jp-relatedposts .jp-relatedposts-items .jp-relatedposts-post .jp-relatedposts-post-context, #jp-relatedposts .jp-relatedposts-items .jp-relatedposts-post .jp-relatedposts-post-date p {
	display: none;
}

@media (max-width: 767px) and (min-width: 0px) {
	#jp-relatedposts {
		padding-left: 30px;
	}
}

.wp-caption {
	border: 1px solid #ddd;
	text-align: center;
	background-color: #28292e;
	color: #ffffff;
	margin: 10px;
	font-style: italic;
	font-size: 13px;
}

.page-id-11124 iframe {
}*/

